# mcp_gis-tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
plugins/: CMakeLists.txt  GisTool.cpp  GisTypes.h  ToolRegistry.cpp  ToolRegistry.h
plugins/Aggregation/: AggregationCommon.cpp  AggregationCommon.h  AggregationSchemas.cpp  AggregationSchemas.h  AggregationTool.cpp  AggregationTool.h
plugins/Boolean/: BooleanSchemas.cpp  BooleanSchemas.h  BooleanTools.cpp  BooleanTools.h
plugins/Classification/: ClassificationSchemas.cpp  ClassificationSchemas.h  ClassificationTool.cpp  ClassificationTool.h
plugins/FeatureBuilders/: FeatureBuilders.cpp  FeatureBuilders.h
plugins/GeoAlgorithms/: GeoAlgorithms.cpp  GeoAlgorithms.h
plugins/GeoJsonParsing/: GeoJsonParsingUtils.cpp  GeoJsonParsingUtils.h
plugins/GeoMath/: GeoMath.cpp  GeoMath.h
plugins/GeoUnits/: GeoUnits.cpp  GeoUnits.h
plugins/Measurement/: MeasurementSchemas.cpp  MeasurementSchemas.h  MeasurementTools.cpp  MeasurementTools.h
plugins/Transformation/: TransformationGeometryOps.cpp  TransformationGeometryOps.h  TransformationSchemas.cpp  TransformationSchemas.h  TransformationTools.cpp  TransformationTools.h
plugins/echo-text/: CMakeLists.txt  EchoText.cpp
plugins/geojson/: GeoJsonTraversal.cpp  GeoJsonTraversal.h
plugins/gis-tool/: CMakeLists.txt  GisTool.cpp  ToolRegistry.cpp  ToolRegistry.h
plugins/gis-tool/geojson/: GeoJsonTraversal.cpp  GeoJsonTraversal.h
plugins/gis-tool/tools/: GeoJsonTools.cpp  GeoJsonTools.h  Wgs84Tools.cpp  Wgs84Tools.h
src/: main.cpp
src/loader/: PluginsLoader.cpp
src/server/: Server.cpp
src/utils/: MCPBuilder.h
test/: classification-tool-prompts-claude.md  configuration-stdio-windows.json  gis-tool-prompts-Aggregation.md  gis-tool-prompts-Transformation.md  gis-tool-prompts-hcm.md  test-classification-stdio.py  test-gis-tools-stdio.py
